0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_em.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_processing/apodization/plot_proc_em.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_em.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_em.py:


Exponential window multiplication
=================================

In this example, we perform exponential window multiplication to apodize a NMR signal in the time domain.

.. GENERATED FROM PYTHON SOURCE LINES 17-25

.. code-block:: Python

    import spectrochempy as scp

    Hz = scp.ur.Hz
    us = scp.ur.us

    path = scp.preferences.datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"
    dataset1D = scp.read_topspin(path, expno=1, remove_digital_filter=True)








.. GENERATED FROM PYTHON SOURCE LINES 26-27

Normalize the dataset values and reduce the time domain

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: Python

    dataset1D /= dataset1D.real.data.max()  # normalize
    dataset1D = dataset1D[0.0:15000.0]








.. GENERATED FROM PYTHON SOURCE LINES 31-32

Apply exponential window apodization

.. GENERATED FROM PYTHON SOURCE LINES 32-34

.. code-block:: Python

    new1, curve1 = scp.em(dataset1D.copy(), lb=20 * Hz, retapod=True, inplace=False)








.. GENERATED FROM PYTHON SOURCE LINES 35-37

Apply a shifted exponential window apodization
default units are HZ for broadening and microseconds for shifting

.. GENERATED FROM PYTHON SOURCE LINES 37-41

.. code-block:: Python

    new2, curve2 = dataset1D.copy().em(
        lb=100 * Hz, shifted=10000 * us, retapod=True, inplace=False
    )








.. GENERATED FROM PYTHON SOURCE LINES 42-43

Plotting

.. GENERATED FROM PYTHON SOURCE LINES 43-49

.. code-block:: Python

    dataset1D.plot(zlim=(-2, 2), color="k")
    curve1.plot(color="r")
    new1.plot(color="r", clear=False, label=" em = 20 hz")
    curve2.plot(color="b", clear=False)
    new2.plot(dcolor="b", clear=False, label=" em = 30 HZ, shifted = ")




.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_em_001.png
         :alt: plot proc em
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_em_001.png
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_em_002.png
         :alt: plot proc em
         :srcset: /gettingstarted/examples/gallery/auto_examples_processing/apodization/images/sphx_glr_plot_proc_em_002.png
         :class: sphx-glr-multi-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 50-53

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python
scp.show()

.. GENERATED FROM PYTHON SOURCE LINES 55-56

sphinx_gallery_thumbnail_number = -1


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.544 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_processing_apodization_plot_proc_em.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_proc_em.ipynb <plot_proc_em.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_proc_em.py <plot_proc_em.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_proc_em.zip <plot_proc_em.zip>`
